# pais

./: CLAUDE.md  Cargo.toml  README.md  paii.toml  pais.toml  pais.yaml
.claude/: settings.json
.github/workflows/: release.yml
completions/: README.md  _paii  _pais  paii.bash  paii.fish  pais.bash  pais.fish
docs/: dashboard-options.md  design-context-injection.md  design-image-generation.md  design-personal-skills-separation.md  design-plugin-enhancements.md  design-skills-architecture-phases.md  design-skills-architecture.md  gap-analysis-pais-vs-kai.md  implementation-roadmap.md
docs/claude-code/: hooks-guide.md  mcp.md  troubleshooting.md
docs/kai/: beyond-tools-to-systems.md  building-a-personal-ai-infrastructure.md  building-your-own-unified-ai-assistant-using-claude-code-transcript.txt  building-your-own-unified-ai-assistant-using-claude-code.md
docs/planning/: architecture.md  cli.md  comparison.md  contracts.md  decisions.md  dynamic-skills.md  index.md  plugins.md  use-cases.md  vision.md
examples/hello-rust/: README.md  SKILL.md  plugin.toml
examples/hello-world/: README.md  SKILL.md  plugin.toml  pyproject.toml
plugins/aka/: plugin.toml
plugins/cidr/: plugin.toml
plugins/dashify/: plugin.toml
plugins/git-tools/: SKILL.md  plugin.toml
plugins/image/: Aesthetic.md  SKILL.md  plugin.toml
plugins/pr-review-finder/: channels.yaml  plugin.yaml  pyproject.toml
plugins/pr-review-finder/src/: main.py
registry/: plugins.toml
src/: architecture.rs  cli.rs  config.rs  main.rs  migrate.rs
src/hook/: mod.rs  (+5 more)
tests/: plugin_integration.rs
(+62 files in other folders)
